[gd_scene format=3 uid="uid://cmmtiienjt1tm"]

[ext_resource type="Script" uid="uid://c6nn5s20n85dk" path="res://scripts/quest_heading.gd" id="1_4yhxo"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_qtl7k"]

[sub_resource type="LabelSettings" id="LabelSettings_4yhxo"]
font_size = 24
font_color = Color(0.23921569, 0.23921569, 0.23921569, 1)

[node name="QuestHeading" type="HSplitContainer" unique_id=191167714 groups=["QuestHeading"]]
split_offsets = PackedInt32Array(128)
dragging_enabled = false
dragger_visibility = 1
split_offset = 128
script = ExtResource("1_4yhxo")

[node name="QuestImage" type="TextureRect" parent="." unique_id=1820259707]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("PlaceholderTexture2D_qtl7k")

[node name="QuestDetails" type="VSplitContainer" parent="." unique_id=625126645]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="QuestDetails" unique_id=15648137]
layout_mode = 2

[node name="LocationLabel" type="Label" parent="QuestDetails/HSplitContainer" unique_id=885134934]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Location Name"
label_settings = SubResource("LabelSettings_4yhxo")

[node name="EmbarkButton" type="Button" parent="QuestDetails/HSplitContainer" unique_id=1800661859]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "EMBARK!"

[node name="BrickExamples" type="HBoxContainer" parent="QuestDetails" unique_id=1537601019]
layout_mode = 2

[connection signal="pressed" from="QuestDetails/HSplitContainer/EmbarkButton" to="." method="_on_embark_button_pressed"]
